// Vitest Snapshot v1

exports[`Badge > Badge baseVue demo works fine 1`] = `
<t-space
  align="center"
  data-v-527a6600=""
  size="32"
>
  <t-badge
    data-v-527a6600=""
    dot=""
  >
    <div
      class="badge-block"
      data-v-527a6600=""
    />
  </t-badge>
  <t-badge
    data-v-527a6600=""
    dot=""
  >
    解锁新徽章
  </t-badge>
  <t-badge
    data-v-527a6600=""
    dot=""
  >
    <svg
      class="t-icon"
      data-v-527a6600=""
      style="font-size: 24px;"
      version="1.1"
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8,9 C9.40504021,9 10.7254812,9.36221239 11.8730402,9.99835445 L11.885,10 L12.4565011,10.2862457 C12.7901689,10.4574447 13,10.8009441 13,11.1759685 L13,13 C13,13.5522847 12.5522847,14 12,14 L4,14 C3.44771525,14 3,13.5522847 3,13 L3,11.1762791 C3,10.8012353 3.20985249,10.4577217 3.54354665,10.2865317 L4.121,10 L4.126,9.999 L4.27379497,9.91895294 C5.38659871,9.3321599 6.6545093,9 8,9 Z M8,10 C6.51283435,10 5.13398645,10.4637634 4.00018867,11.2545577 L4,13 L12,13 L12.0003287,11.2549186 C10.8664331,10.4639045 9.48739188,10 8,10 Z M8,2.49576492 C9.65685425,2.49576492 11,3.83891067 11,5.49576492 C11,7.15261916 9.65685425,8.49576492 8,8.49576492 C6.34314575,8.49576492 5,7.15261916 5,5.49576492 C5,3.83891067 6.34314575,2.49576492 8,2.49576492 Z M8,3.49576492 C6.8954305,3.49576492 6,4.39119542 6,5.49576492 C6,6.60033441 6.8954305,7.49576492 8,7.49576492 C9.1045695,7.49576492 10,6.60033441 10,5.49576492 C10,4.39119542 9.1045695,3.49576492 8,3.49576492 Z"
        data-v-527a6600=""
        fill-rule="evenodd"
      />
    </svg>
  </t-badge>
</t-space>
`;

exports[`Badge > Badge customVue demo works fine 1`] = `
<t-space
  data-v-a2369e40=""
  size="32"
>
  <t-badge
    count="2"
    data-v-a2369e40=""
    dot=""
  >
    <div
      class="badge-block"
      data-v-a2369e40=""
    />
  </t-badge>
  <t-badge
    count="new"
    data-v-a2369e40=""
  >
    <div
      class="badge-block"
      data-v-a2369e40=""
    />
  </t-badge>
  <t-badge
    color="#00A870"
    count="99"
    data-v-a2369e40=""
  >
    <div
      class="badge-block"
      data-v-a2369e40=""
    />
  </t-badge>
  <t-badge
    color="#0052D9"
    count="100"
    data-v-a2369e40=""
    shape="round"
  >
    <div
      class="badge-block"
      data-v-a2369e40=""
    />
  </t-badge>
</t-space>
`;

exports[`Badge > Badge numberVue demo works fine 1`] = `
<t-space
  data-v-14695690=""
  size="32"
>
  <t-badge
    count="2"
    data-v-14695690=""
  >
    <div
      class="badge-block"
      data-v-14695690=""
    />
  </t-badge>
  <t-badge
    count="0"
    data-v-14695690=""
    show-zero=""
  >
    <div
      class="badge-block"
      data-v-14695690=""
    />
  </t-badge>
  <t-badge
    count="100"
    data-v-14695690=""
  >
    <div
      class="badge-block"
      data-v-14695690=""
    />
  </t-badge>
</t-space>
`;

exports[`Badge > Badge offsetVue demo works fine 1`] = `
<t-space
  data-v-335fadfc=""
  size="24"
>
  <t-badge
    count="2"
    data-v-335fadfc=""
  >
    <div
      class="badge-block"
      data-v-335fadfc=""
    />
  </t-badge>
  <t-badge
    count="2"
    data-v-335fadfc=""
    offset="10,10"
  >
    <div
      class="badge-block"
      data-v-335fadfc=""
    />
  </t-badge>
  <t-badge
    count="2"
    data-v-335fadfc=""
    offset="-10,10"
  >
    <div
      class="badge-block"
      data-v-335fadfc=""
    />
  </t-badge>
  <t-badge
    count="2"
    data-v-335fadfc=""
    offset="-10,-10"
  >
    <div
      class="badge-block"
      data-v-335fadfc=""
    />
  </t-badge>
  <t-badge
    count="2"
    data-v-335fadfc=""
    offset="10,-10"
  >
    <div
      class="badge-block"
      data-v-335fadfc=""
    />
  </t-badge>
</t-space>
`;

exports[`Badge > Badge shapeVue demo works fine 1`] = `
<t-space
  data-v-0a016f82=""
  size="32"
>
  <t-badge
    count="2"
    data-v-0a016f82=""
    shape="circle"
  >
    <div
      class="badge-block"
      data-v-0a016f82=""
    />
  </t-badge>
  <t-badge
    count="99"
    data-v-0a016f82=""
    shape="round"
  >
    <div
      class="badge-block"
      data-v-0a016f82=""
    />
  </t-badge>
</t-space>
`;

exports[`Badge > Badge sizeVue demo works fine 1`] = `
<t-space
  data-v-28dbb1a0=""
  direction="vertical"
  size="20"
>
  <t-space
    data-v-28dbb1a0=""
    direction="vertical"
    size="20"
  >
    <h3
      class="demo-t-badge-title"
      data-v-28dbb1a0=""
    >
      1.默认大小
    </h3>
    <t-space
      data-v-28dbb1a0=""
      size="24"
    >
      <t-badge
        count="2"
        data-v-28dbb1a0=""
      >
        <div
          class="badge-block"
          data-v-28dbb1a0=""
        />
      </t-badge>
      <t-badge
        count="99"
        data-v-28dbb1a0=""
      >
        <div
          class="badge-block"
          data-v-28dbb1a0=""
        />
      </t-badge>
      <t-badge
        count="999"
        data-v-28dbb1a0=""
      >
        <div
          class="badge-block"
          data-v-28dbb1a0=""
        />
      </t-badge>
    </t-space>
  </t-space>
  <t-space
    data-v-28dbb1a0=""
    direction="vertical"
    size="20"
  >
    <h3
      class="demo-t-badge-title"
      data-v-28dbb1a0=""
    >
      2.小
    </h3>
    <t-space
      data-v-28dbb1a0=""
      size="24"
    >
      <t-badge
        count="2"
        data-v-28dbb1a0=""
        size="small"
      >
        <div
          class="badge-block"
          data-v-28dbb1a0=""
        />
      </t-badge>
      <t-badge
        count="99"
        data-v-28dbb1a0=""
        size="small"
      >
        <div
          class="badge-block"
          data-v-28dbb1a0=""
        />
      </t-badge>
      <t-badge
        count="999"
        data-v-28dbb1a0=""
        size="small"
      >
        <div
          class="badge-block"
          data-v-28dbb1a0=""
        />
      </t-badge>
    </t-space>
  </t-space>
</t-space>
`;
